update the links to my socials and fixed layout issue with the social links

--- a/styles.css
+++ b/styles.css
@@ -474,8 +474,9 @@ ul li a:hover span:nth-child(4) {
 
   .links-container{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
+    flex-wrap: wrap;
   }
 
   .link{
